--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "autoload": {
         "psr-4": {
-            "src\\":"logier"
+            "logier\\":"src/"
         },
         "files": [
             "src/helper.php"
